Block Upt/Del for coffee shops for non-staff users
- Fix lowercase db attributes in coffee shop model
- Add Modified date to coffee shop update in postgres query
