# docs/swagger.json
@@ -950,10 +950,7 @@
                 "address": {
                     "type": "string"
                 },
-                "created_date": {
-                    "type": "string"
-                },
-                "id": {
+                "city": {
                     "type": "string"
                 },
                 "location": {
@@ -962,14 +959,14 @@
                         "type": "number"
                     }
                 },
-                "modified_date": {
-                    "type": "string"
-                },
                 "name": {
                     "type": "string"
                 },
                 "rating": {
                     "type": "number"
+                },
+                "roaster": {
+                    "type": "boolean"
                 }
             }
         },
@@ -1000,6 +997,9 @@
                     "type": "string"
                 },
                 "id": {
+                    "type": "string"
+                },
+                "isStaff": {
                     "type": "string"
                 },
                 "lastName": {
